# Disports

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-python-deps.sh  clickable.yaml  disports.apparmor  disports.desktop.in  manifest.json.in  requirements.txt  snapcraft.yaml
.github/workflows/: build.yaml  release.yaml
po/: disports.jukfiuu.pot  nl.po
qml/: ActiveChatPanel.qml  CallScreen.qml  ChatPage.qml  ChatPanel.qml  DmPanel.qml  FolderPreviewIcon.qml  LoginPage.qml  Main.qml  MediaPreviewPage.qml  MessageBubble.qml  MessageCitation.qml  MessageMedia.qml  PanelHeader.qml  SectionHeader.qml  ServerPanel.qml  SettingsPage.qml  Sidebar.qml  SidebarIcon.qml  StatusDot.qml  UnreadBadge.qml  VoiceAudioBridge.qml
qml/components/: ComposerActionBar.qml  DebugLogOverlay.qml  DeleteDialog.qml  EmojiPanel.qml  EmojiPickerContent.qml  EmojiPickerDialog.qml  OfflineBanner.qml  OfflineView.qml  SplashView.qml
qml/logic/: AppState.qml  AuthLogic.qml  ChatLogic.qml  DmLogic.qml  NavigationLogic.qml  PythonBridge.qml  ThemeLogic.qml  UnreadLogic.qml
scripts/: desktop-with-audio.sh  generate_emoji_cldr_order.py
src/: discord_client.py
src/cpp/: disports_dave.cpp  disports_dave.h  plugin.cpp  qmldir  voiceaudio.cpp  voiceaudio.h
src/disports_discord/: __init__.py  _utils.py  captcha_server.py  client.py  constants.py  dave_interop.py  emoji_catalog.py  emoji_cldr_order.py  errors.py  formatters.py  gateway.py  guild_state.py  http.py  member_state.py  message_formatter.py  permissions.py  pulse_audio.py  qt_audio.py  reactions.py  read_state.py  relationship_state.py  remote_auth.py  state.py  voice_client.py  voice_state.py
